# ims

./: .gitignore  main.py  pyproject.toml  railway.json
app/: auth.py  conf.py  dependencies.py  utils.py
app/db/: db.py
app/db/crud/: inventory.py
app/db/models/: audit.py  inventory.py  items.py  transactions.py  users.py
app/routers/: auth.py  inventory.py  items.py  products.py  stats.py  transactions.py  users.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: base.html  index.html
app/templates/items/: index.html
app/templates/layouts/: base.html  dashboard.html
app/templates/pages/: home.html  login.html  products.html
app/templates/pages/inventory/: index.html
app/templates/partials/: alerts.html  header.html  navbar.html  theme_toggle.html
app/templates/partials/products/: form.html  list.html
lib/: .prettierrc  README.md  package.json
lib/src/: daisy.css  tailwind.css
